[package]
name = "chat-example"
version = "0.2.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"
repository = "https://github.com/calimero-network/boot-node"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
eyre = "0.6.12"
libp2p = { version = "0.53.2", features = [
    "dcutr",
    "dns",
    "gossipsub",
    "identify",
    "macros",
    "mdns",
    "noise",
    "ping",
    "quic",
    "rendezvous",
    "relay",
    "tokio",
    "tcp",
    "tls",
    "yamux",
] }
multiaddr = "0.18.1"
owo-colors = "4.0.0"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = [
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
