[package]
name = "chat-example"
version = "0.3.0"
authors = ["Calimero Limited <info@calimero.network>"]
edition = "2021"
repository = "https://github.com/calimero-network/boot-node"
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
eyre = "0.6.12"
futures-util = { version = "0.3.30" }
libp2p = { version = "0.53.2", features = [
    "dcutr",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "mdns",
    "noise",
    "ping",
    "quic",
    "rendezvous",
    "relay",
    "tokio",
    "tcp",
    "tls",
    "yamux",
] }
libp2p-stream = "0.1.0-alpha.1"
multiaddr = "0.18.1"
owo-colors = "4.0.0"
rand = { version = "0.8.5" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
tokio-test = { version = "0.4.4" }
